Avoid using icon for deprecated items (for readability)

--- a/docs/static/content.css
+++ b/docs/static/content.css
@@ -523,16 +523,8 @@ right:0;
 height: 50%;
 }
 
-#left .deprecated:after {
-content:"!";
-text-decoration:none;
-display:inline-block;
-padding-left:3px;
-vertical-align:bottom;
-color:indianred;
-font-weight:normal;
-font-family:icons;
-font-size:.9em
+#left .deprecated {
+color: brown !important;
 }
 
 .triangle-down {
@@ -767,18 +759,9 @@ white-space:nowrap
 }
 
 #right .deprecated {
-color:brown
-}
-
-#right .deprecated:after {
-content:"!";
-text-decoration:none;
-display:inline-block;
-padding-left:3px;
-vertical-align:bottom;
-font-weight:normal;
-font-family:icons;
-font-size:.9em
+color: brown;
+text-decoration: none;
+border-bottom: 1px dashed brown;
 }
 
 pre[class="origin"] span > a,pre[class="origin"] span > a:hover {
